# reggui

./: Dockerfile  README.md  compose.yml  pyproject.toml
Docker/: entrypoint.sh  init.sql  poetry_install.sh
reggui/: eda.py  main.py  workflow.py
reggui/assets/: manifest.json
reggui/data/: cal_housing.db  netflix_titles.db
